--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zmaison",
+  "name": "ZMaisonEDT",
   "version": "1.0.0",
   "description": "Discord bot for EDT",
   "main": "index.js",
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@napi-rs/canvas": "^0.1.29",
-    "discord.js": "^14.3.0",
+    "discord.js": "^14.5.0",
+    "node-schedule": "^2.1.0",
     "sqlite3": "^5.0.11"
   }
 }
