--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "ZMaisonEDT",
-  "version": "1.0.0",
+  "name": "zmaison",
+  "version": "2.0.0",
   "description": "Discord bot for EDT",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rochdy",
-  "license": "ISC",
   "dependencies": {
     "@napi-rs/canvas": "^0.1.29",
-    "discord.js": "^14.5.0",
-    "node-schedule": "^2.1.0",
-    "sqlite3": "^5.0.11"
+    "discord.js": "^14.7.1",
+    "discordjs-button-embed-pagination": "^5.0.0",
+    "mysql2": "^3.1.2",
+    "node-schedule": "^2.1.1",
+    "nodemon": "^2.0.20"
   }
 }
