--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "author": "Rochdy",
   "dependencies": {
-    "@napi-rs/canvas": "^0.1.29",
-    "discord.js": "^14.7.1",
+    "@napi-rs/canvas": "^0.1.40",
+    "@napi-rs/canvas-linux-arm64-gnu": "^0.1.40",
+    "canvas": "^2.11.2",
+    "chartjs-node-canvas": "^4.1.6",
+    "discord.js": "^14.9.0",
     "discordjs-button-embed-pagination": "^5.0.0",
     "mysql2": "^3.1.2",
-    "node-schedule": "^2.1.1",
-    "nodemon": "^2.0.20"
+    "rainbowvis.js": "^1.1.1"
   }
 }
